--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/expand-region-el.git;a=summar
 Package: expand-region-el
 Architecture: all
 Depends: ${misc:Depends}
+Enhances: emacs, emacs23, emacs24
 Description: Increase selected region in Emacs by semantic units
  Expand region increases the selected region by semantic units.  Just
  keep pressing the 'C-=' key until it selects what you want.
