--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Package: expand-region-el
 Architecture: all
 Depends: ${misc:Depends}
 Enhances: emacs, emacs23, emacs24
+Breaks: sml-mode (<< 6)
 Description: Increase selected region in Emacs by semantic units
  Expand region increases the selected region by semantic units.  Just
  keep pressing the 'C-=' key until it selects what you want.
