--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian Emacs addons team <pkg-emacsen-addons@lists.alioth.debian.org>
 Uploaders: Barak A. Pearlmutter <bap@debian.org>,
            Lev Lamberov <dogsleg@debian.org>
-Build-Depends: debhelper (>= 9), dh-elpa (>= 0.0.17)
+Build-Depends: debhelper (>= 10), dh-elpa
 Standards-Version: 3.9.8
 Homepage: https://github.com/magnars/expand-region.el
 Vcs-Git: git://anonscm.debian.org/collab-maint/expand-region-el.git
