--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: expand-region-el
 Section: editors
-Priority: extra
+Priority: optional
 Maintainer: Debian Emacs addons team <pkg-emacsen-addons@lists.alioth.debian.org>
 Uploaders: Barak A. Pearlmutter <bap@debian.org>,
            Lev Lamberov <dogsleg@debian.org>
