--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: debhelper (>= 10),
                dh-elpa
 Standards-Version: 4.1.1
 Homepage: https://github.com/magnars/expand-region.el
-Vcs-Git: https://alioth.debian.org/anonscm/git/collab-maint/expand-region-el.git
-Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/expand-region-el.git
+Vcs-Git: https://salsa.debian.org/emacsen-team/expand-region-el.git
+Vcs-Browser: https://salsa.debian.org/emacsen-team/expand-region-el
 
 Package: elpa-expand-region
 Architecture: all
