--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: expand-region-el
 Section: editors
 Priority: optional
-Maintainer: Debian Emacs addons team <pkg-emacsen-addons@lists.alioth.debian.org>
+Maintainer: Debian Emacsen Team <debian-emacsen@lists.debian.org>
 Uploaders: Barak A. Pearlmutter <bap@debian.org>,
            Lev Lamberov <dogsleg@debian.org>
 Build-Depends: debhelper (>= 11),
