--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,7 @@ Priority: optional
 Maintainer: Debian Emacs addons team <pkg-emacsen-addons@alioth-lists.debian.net>
 Uploaders: Barak A. Pearlmutter <bap@debian.org>,
            Lev Lamberov <dogsleg@debian.org>
-Build-Depends: debhelper (>= 13~),
-               dh-elpa
+Build-Depends: debhelper-compat (= 13), dh-elpa
 Standards-Version: 4.1.3
 Homepage: https://github.com/magnars/expand-region.el
 Vcs-Git: https://salsa.debian.org/emacsen-team/expand-region-el.git
